refactor(core): remove RunnerUtils.typedInputs