@@ -26,9 +26,11 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 @KestraTest
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class NoEncryptionConfiguredTest extends AbstractMemoryRunnerTest implements TestPropertyProvider {
-
     @Inject
     private FlowRepositoryInterface flowRepository;
+
+    @Inject
+    private FlowInputOutput flowIO;
 
     // this will erase the property from the application-test.yml effectively making encryption not configured
     @Override
@@ -38,6 +40,7 @@ public class NoEncryptionConfiguredTest extends AbstractMemoryRunnerTest impleme
         return properties;
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void encryptedStringOutput() throws TimeoutException {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "encrypted-string");
@@ -50,13 +53,15 @@ public class NoEncryptionConfiguredTest extends AbstractMemoryRunnerTest impleme
         assertThat(valueOutput.get("type"), is(EncryptedString.TYPE));
         // the value is not encrypted as there is no encryption key
         assertThat(valueOutput.get("value"), is("Hello World"));
-        TaskRun returnTask = execution.findTaskRunsByTaskId("return").get(0);
+        TaskRun returnTask = execution.findTaskRunsByTaskId("return").getFirst();
         // the output is automatically decrypted so the return has the decrypted value of the hello task output
         assertThat(returnTask.getOutputs().get("value"), is("Hello World"));
     }
 
     @Test
     void secretInput() {
+        assertThat(flowRepository.findById(null, "io.kestra.tests", "inputs").isPresent(), is(true));
+
         Flow flow = flowRepository.findById(null, "io.kestra.tests", "inputs").get();
         Execution execution = Execution.builder()
             .id("test")
@@ -65,6 +70,6 @@ public class NoEncryptionConfiguredTest extends AbstractMemoryRunnerTest impleme
             .flowId(flow.getId())
             .build();
 
-        assertThrows(ConstraintViolationException.class, () -> runnerUtils.typedInputs(flow, execution, InputsTest.inputs));
+        assertThrows(ConstraintViolationException.class, () -> flowIO.typedInputs(flow, execution, InputsTest.inputs));
     }
 }
